# pycuSPLAT

./: .gitignore  LICENSE  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
ply2splat/: CMakeLists.txt  ply2splat.cpp  setup.py
scene/: __init__.py  cameras.py  gaussian_model.py
submodules/ply2splat/: pcpp  ply2splat.cu  setup.py
submodules/ply2splat/ply2splat/: __init__.py
submodules/ply2splat/ply2splat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: camera_utils.py  general_utils.py
